--- a/.github/workflows/terrform-plan.yml
+++ b/.github/workflows/terrform-plan.yml
@@ -1,39 +1,42 @@
-# This is a basic workflow to help you get started with Actions
+name: "Terraform"
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: 
+    branches:
       - main
+  pull_request:
 
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   terraform:
-    name: "terraform"
-    runs-on: ubuntu-latest
+    name: "Terraform"
     env:
       AWS_ACCESS_KEY_ID: ${{secrets.AWS_KEY_ID}}
       AWS_SECRET_KEY: ${{secrets.AWS_SECRET}}
-       
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    runs-on: ubuntu-latest
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: setup terrafrom
-      - uses: hashicorp/setup-terraform@v1
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          # terraform_version: 0.13.0:
+          cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
-      # Runs a set of commands using the runners shell
-      - name: run terraform init
+      - name: Terraform Format
+        id: fmt
+        run: terraform fmt -check
+
+      - name: Terraform Init
         id: init
         run: terraform init
-        
-     - name: run terraform plan
-       id: plan
-       run: terraform plan
+      
+      - name: Terraform Validate
+        id: validate
+        run: terraform validate -no-color
+
+      - name: Terraform Plan
+        id: plan
+        if: github.event_name == 'pull_request'
+        run: terraform plan -no-color
+        continue-on-error: true
